--- a/index.html
+++ b/index.html
@@ -7,14 +7,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3 azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>e-News Magazine</title>
+    <title>e-News & Magazine</title>
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <!-- header area start -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
+                    aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">e-News & Magazine</a>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo03">
+                        <ul class="navbar-nav mb-2 mb-lg-0">
+                            <li class="nav-item p-2">
+                                <a class="nav-link active" aria-current="page" href="index.html">News</a>
+                            </li>
+                            <li class="nav-item p-2">
+                                <a class="nav-link" href="blog.html">Blog</a>
+                            </li>
+                        </ul>
+                        <img src="images/Avatar.png" class="p-2" alt="">
+                    </div>
+                    
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!-- header area end -->
+
+    <!-- main area start -->
+    <main>
+
+    </main>
+    <!-- main area end -->
 
 
 
