--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/b942952c4c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
 
     <title>e-News & Magazine</title>
@@ -43,8 +45,49 @@
     <!-- header area end -->
 
     <!-- main area start -->
-    <main>
-
+    <main class="container">
+        <div class="card m-5">
+            <div class="row g-0">
+                <div class="col-md-3">
+                    <img src="images/card.png" class="img-fluid rounded-start" alt="">
+                </div>
+                <div class="col-md-9">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                            content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                    <div class="row col-md-12 p-3">
+                        <div class="row col-md-4">
+                            <div class="col-md-3">
+                                <img src="images/Avatar.png" alt="">
+                            </div>
+                            <div class="col-md-9">
+                                <p class="m-0"><b>Jane Cooper</b></p>
+                                <p class="m-0">Jan 10, 2022</p>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <p><span><i class="fa-regular fa-eye"></i></span> 1.5M</p>
+                        </div>
+                        <div class="col-md-4">
+                            <p>
+                                <span><i class="fa-solid fa-star-half-stroke"></i></span>
+                                <span><i class="fa-regular fa-star"></i>
+                                <span><i class="fa-regular fa-star"></i>
+                                <span><i class="fa-regular fa-star"></i>
+                                <span><i class="fa-regular fa-star"></i>
+                            </p>
+                        </div>
+                        <div class="col-md-2">
+                            <p><span><i class="fa-solid fa-arrow-right"></i></span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
     </main>
     <!-- main area end -->
 
