--- a/index.html
+++ b/index.html
@@ -87,11 +87,14 @@
                 </div>
             </div>
         </div>
-        
     </main>
     <!-- main area end -->
 
-
+    <!-- footer area start -->
+    <footer class="text-center bg-light p-4 mt-5">
+        <p class="mb-0 text-secondary">Copyright © 2022 e-News & Magazine</p>
+    </footer>
+    <!-- footer area end -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
