category UI added

--- a/index.html
+++ b/index.html
@@ -46,47 +46,75 @@
 
     <!-- main area start -->
     <main class="container">
-        <div class="card m-5">
-            <div class="row g-0">
-                <div class="col-md-3">
-                    <img src="images/card.png" class="img-fluid rounded-start" alt="">
-                </div>
-                <div class="col-md-9">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                            content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
+        <!-- category area start -->
+        <section class="m-4">
+            <ul class="nav justify-content-center">
+                <li class="nav-item">
+                    <strong><a class="nav-link active" aria-current="page" href="#">Active</a></strong>
+                </li>
+                <li class="nav-item">
+                    <strong><a class="nav-link text-secondary" href="#">Link</a></strong>
+                </li>
+                <li class="nav-item">
+                    <strong><a class="nav-link text-secondary" href="#">Link</a></strong>
+                </li>
+            </ul>
+        </section>
+        <!-- category area end -->
+
+        <!-- show number of category items start -->
+        <section class="d-none text-center m-4">
+            <h5>4 items found for category Entertainment</h5>
+        </section>
+        <!-- show number of category items end -->
+
+        <!-- news card start -->
+        <section>
+            <div class="card m-5">
+                <div class="row g-0">
+                    <div class="col-md-3">
+                        <img src="images/card.png" class="img-fluid rounded-start" alt="">
                     </div>
-                    <div class="row col-md-12 p-3">
-                        <div class="row col-md-4">
-                            <div class="col-md-3">
-                                <img src="images/Avatar.png" alt="">
+                    <div class="col-md-9">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                                content. This content is a little bit longer.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                        <div class="row col-md-12 p-3">
+                            <div class="row col-md-4">
+                                <div class="col-md-3">
+                                    <img src="images/Avatar.png" alt="">
+                                </div>
+                                <div class="col-md-9">
+                                    <p class="m-0"><b>Jane Cooper</b></p>
+                                    <p class="m-0">Jan 10, 2022</p>
+                                </div>
                             </div>
-                            <div class="col-md-9">
-                                <p class="m-0"><b>Jane Cooper</b></p>
-                                <p class="m-0">Jan 10, 2022</p>
+                            <div class="col-md-2">
+                                <p><span><i class="fa-regular fa-eye"></i></span> 1.5M</p>
                             </div>
-                        </div>
-                        <div class="col-md-2">
-                            <p><span><i class="fa-regular fa-eye"></i></span> 1.5M</p>
-                        </div>
-                        <div class="col-md-4">
-                            <p>
-                                <span><i class="fa-solid fa-star-half-stroke"></i></span>
-                                <span><i class="fa-regular fa-star"></i>
-                                <span><i class="fa-regular fa-star"></i>
-                                <span><i class="fa-regular fa-star"></i>
-                                <span><i class="fa-regular fa-star"></i>
-                            </p>
-                        </div>
-                        <div class="col-md-2">
-                            <p><span><i class="fa-solid fa-arrow-right"></i></span></p>
+                            <div class="col-md-4">
+                                <p>
+                                    <span><i class="fa-solid fa-star-half-stroke"></i></span>
+                                    <span><i class="fa-regular fa-star"></i></span>
+                                    <span><i class="fa-regular fa-star"></i></span>
+                                    <span><i class="fa-regular fa-star"></i></span>
+                                    <span><i class="fa-regular fa-star"></i></span>
+                                </p>
+                            </div>
+                            <div class="col-md-2">
+                                <p class="text-primary fs-5"><span><i class="fa-solid fa-arrow-right"></i></span></p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+        <!-- news card end -->
+        
     </main>
     <!-- main area end -->
 
