--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo03">
                         <ul class="navbar-nav mb-2 mb-lg-0">
                             <li class="nav-item p-2">
-                                <a class="nav-link active" aria-current="page" href="index.html">News</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item p-2">
                                 <a class="nav-link" href="blog.html">Blog</a>
@@ -49,16 +49,8 @@
 
         <!-- category area start -->
         <section class="m-4">
-            <ul class="nav justify-content-center">
-                <li class="nav-item">
-                    <strong><a class="nav-link active" aria-current="page" href="#">Active</a></strong>
-                </li>
-                <li class="nav-item">
-                    <strong><a class="nav-link text-secondary" href="#">Link</a></strong>
-                </li>
-                <li class="nav-item">
-                    <strong><a class="nav-link text-secondary" href="#">Link</a></strong>
-                </li>
+            <ul id="category-list" class="nav justify-content-center">
+                
             </ul>
         </section>
         <!-- category area end -->
