--- a/index.html
+++ b/index.html
@@ -63,46 +63,8 @@
 
         <!-- news card start -->
         <section>
-            <div class="card m-5">
-                <div class="row g-0">
-                    <div class="col-md-3">
-                        <img src="images/card.png" class="img-fluid rounded-start" alt="">
-                    </div>
-                    <div class="col-md-9">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                                content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                        </div>
-                        <div class="row col-md-12 p-3">
-                            <div class="row col-md-4">
-                                <div class="col-md-3">
-                                    <img src="images/Avatar.png" alt="">
-                                </div>
-                                <div class="col-md-9">
-                                    <p class="m-0"><b>Jane Cooper</b></p>
-                                    <p class="m-0">Jan 10, 2022</p>
-                                </div>
-                            </div>
-                            <div class="col-md-2">
-                                <p><span><i class="fa-regular fa-eye"></i></span> 1.5M</p>
-                            </div>
-                            <div class="col-md-4">
-                                <p>
-                                    <span><i class="fa-solid fa-star-half-stroke"></i></span>
-                                    <span><i class="fa-regular fa-star"></i></span>
-                                    <span><i class="fa-regular fa-star"></i></span>
-                                    <span><i class="fa-regular fa-star"></i></span>
-                                    <span><i class="fa-regular fa-star"></i></span>
-                                </p>
-                            </div>
-                            <div class="col-md-2">
-                                <p class="text-primary fs-5"><span><i class="fa-solid fa-arrow-right"></i></span></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div id="news-container" class="card m-5">
+                
             </div>
         </section>
         <!-- news card end -->
