loader function added

--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@
         </section>
         <!-- show number of category items end -->
 
+        <!-- loader area start -->
+        <section id="loader" class="d-none text-center m-4">
+            <div class="d-flex justify-content-center">
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </section>
+        <!-- loader area end -->
+
         <!-- news card start -->
         <section id="news-container">
             
