added an accordions section to the blog page

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
         </section>
         <!-- category area end -->
 
-        <!-- show number of category items start -->
-        <section class="d-none text-center m-4">
-            <h5>4 items found for category Entertainment</h5>
+        <!-- show number of news category start -->
+        <section id="news-number" class="text-center m-4">
+            
         </section>
-        <!-- show number of category items end -->
+        <!-- show number of news category end -->
 
         <!-- loader area start -->
         <section id="loader" class="d-none text-center m-4">
